[gd_scene load_steps=4 format=3 uid="uid://d17gs5yghghj8"]

[ext_resource type="Script" path="res://tools/node_debug/Performance/DebugPerformance.gd" id="1_3p2q1"]

[sub_resource type="LabelSettings" id="LabelSettings_3cbl3"]
font_size = 22
font_color = Color(1, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_scfi7"]
font_size = 22

[node name="DebugPerformance" type="Panel"]
offset_right = 250.0
offset_bottom = 200.0
script = ExtResource("1_3p2q1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -90.0
offset_right = 91.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2

[node name="Nodes" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/Nodes"]
layout_mode = 2
text = "Nodes:"
label_settings = SubResource("LabelSettings_3cbl3")

[node name="Value" type="Label" parent="VBox/Nodes"]
layout_mode = 2
text = "9.999.999"
label_settings = SubResource("LabelSettings_scfi7")

[node name="Resources" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/Resources"]
layout_mode = 2
text = "Resources:"
label_settings = SubResource("LabelSettings_3cbl3")

[node name="Value" type="Label" parent="VBox/Resources"]
layout_mode = 2
text = "9.999.999"
label_settings = SubResource("LabelSettings_scfi7")

[node name="Primitives" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/Primitives"]
layout_mode = 2
text = "Primitives:"
label_settings = SubResource("LabelSettings_3cbl3")

[node name="Value" type="Label" parent="VBox/Primitives"]
layout_mode = 2
text = "9.999.999"
label_settings = SubResource("LabelSettings_scfi7")

[node name="DrawCalls" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/DrawCalls"]
layout_mode = 2
text = "Draw Calls:"
label_settings = SubResource("LabelSettings_3cbl3")

[node name="Value" type="Label" parent="VBox/DrawCalls"]
layout_mode = 2
text = "9.999.999"
label_settings = SubResource("LabelSettings_scfi7")

[node name="VideoMemUsed" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/VideoMemUsed"]
layout_mode = 2
text = "Video Mem:"
label_settings = SubResource("LabelSettings_3cbl3")

[node name="Value" type="Label" parent="VBox/VideoMemUsed"]
layout_mode = 2
text = "9.999.999"
label_settings = SubResource("LabelSettings_scfi7")
